@startuml domain-model
class IdentityUser {
    ...
}

class Author {
    +avatar: string
}

class AuthorFollow {
    +followerId: string
    +followeeId: string
    +timeStamp: DateTime
}

class Cheep {
    +authorId: string
    +cheepOwnerId: string
}

class CheepLike {
    +timeStamp: DateTime
}

class CheepRevision {
    +id: Guid
    +message: string
    +timeStamp: DateTime
}

IdentityUser <|-- Author

Author "1..1" -- "0..N" Cheep

<> follows
AuthorFollow . follows
follows - "0..N   " Author
follows - "0..N   " Author

Cheep "1..1" -- "1..N" CheepRevision
Cheep "      0..1" -- "      0..1" Cheep

<> likes
likes . CheepLike
Author - "0..N" likes
likes - "0..N" Cheep
@enduml
